<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="#80cbc4"
        android:id="@+id/linear_layout_player_queue_bar">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2eb8ab">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="2dp"
            android:background="#f0bdb7b7"
            android:id="@+id/linear_layout_4_button_skip">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fast_forward_white_24dp"
                android:id="@+id/button_skip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_skip"
                android:textColor="#a99f9f"
                android:id="@+id/tv_skip_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="2dp"
            android:background="#f0bdb7b7"
            android:id="@+id/linear_layout_4_button_reverse">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_replay_white_24dp"
                android:id="@+id/button_reverse"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_reverse"
                android:textColor="#a99f9f"
                android:id="@+id/tv_reverse_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="#f0bdb7b7"
            android:paddingBottom="2dp"
            android:id="@+id/linear_layout_4_button_help">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_help_white_24dp"
                android:id="@+id/button_help"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_help"
                android:textColor="#a99f9f"
                android:id="@+id/tv_help_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="#f0bdb7b7"
            android:paddingBottom="2dp"
            android:id="@+id/linear_layout_4_button_assign">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_person_add_white_24dp"
                android:id="@+id/button_assign"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_assign"
                android:textColor="#a99f9f"
                android:id="@+id/tv_assign_button" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="#96c4bdbd"
            android:paddingBottom="2dp"
            android:id="@+id/linear_layout_4_button_abstain">
            <ImageButton
                android:id="@+id/button_abstain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_flag_white_24dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_abstain"
                android:textColor="#ffffff"
                android:id="@+id/tv_abstain_button" />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_arrow_right_white_18dp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:id="@+id/iv_return" />
    </LinearLayout>
</LinearLayout>